# benchmark-euler-kernels

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  plot.py
benchmarks/: CMakeLists.txt  benchmark_cons_to_prim.cpp  benchmark_euler_simulation.cpp  benchmark_godunov.cpp  benchmark_main.cpp  benchmark_prim_to_cons.cpp  benchmark_time_step.cpp  benchmark_utils.cpp  benchmark_utils.hpp  index_type.hpp  real_type.hpp
euler_operators/: CMakeLists.txt  cons_to_prim.hpp  euler_arrays.hpp  godunov.hpp  hllc.hpp  init_implode.hpp  perfect_gas.hpp  periodic_boundary_conditions.hpp  prim_to_cons.hpp  time_step.hpp  uniform_mesh.hpp
setups/: prepare-laptop.sh
setups/adastra/genoa/: job.sh  prepare.sh
setups/adastra/mi300a/: job.sh  prepare.sh
setups/jean-zay/h100/: job.sh  prepare.sh
setups/ruche/a100/: prepare.sh  run.sh
setups/ruche/skx/: prepare.sh  run.sh
setups/ruche/v100/: prepare.sh  run.sh
simulations/: CMakeLists.txt  display_results.py  euler_simulation.cpp  save_npy.cpp  save_npy.hpp
test/: CMakeLists.txt  test_main.cpp  test_prim_to_cons.cpp
